# meeting_summarizer

./: BLUEPRINT.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  system_prompt.txt
prompts/: interview.txt  meeting.txt  sales.txt  standup.txt  webinar.txt
static/: index.html
